namespace eShopX.Domain.Aggregates.Users;

public sealed record Avatar(string Url, string PublicId);
