namespace eShopX.Domain.Aggregates.Users;

public enum Provider
{
    Local,
    Google,
    Line
}
