namespace eShopX.Domain.Aggregates.Users;

[Flags]
public enum Role
{
    Customer = 1,
    Admin    = 2
}
