@startuml
' Aggregate: Users
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

class UserAuthProvider <<Entity>> #D5F5E3 {
  +UserId: Guid
  +Provider: Provider
  +ProviderUserId: string?
  +PasswordHash: string?
  +CreatedAt: DateTime
}

enum Role #FEF9E7 {
  Customer
  Admin
}

class Avatar <<ValueObject>> #F9EBEA {
  +Url: string
  +PublicId: string
}

class RefreshToken {
  +UserId: Guid
  +Token: string
  +ExpireAt: DateTime
  +IsRevoked: bool
  +CreatedAt: DateTime
  ..
  +Revoke()
}

class User <<AggregateRoot>> #D4E6F1 {
  +Name: string
  +Email: string
  +Roles: Role
  +Avatar: Avatar?
  +CreatedAt: DateTime
  ..
  +UpdateProfile()
  +UpdateAvatar()
  +AddAuthProvider()
}

enum Provider #FEF9E7 {
  Local
  Google
  Line
}

' --- Inheritance ---
UserAuthProvider --|> Entity
User --|> AggregateRoot

' --- Composition ---
UserAuthProvider --> Provider
User --> Role
User --> Avatar
User "1" *-- "many" UserAuthProvider

' --- Domain Events ---

@enduml